--- a/!DOCTYP.html
+++ b/!DOCTYP.html
@@ -1,243 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thanks for Downloading - Anime Water Shader</title>
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AgrimArt Free Download</title>
+
+  <!-- Preconnect & Google Ads Global Site Tag -->
+  <link rel="preconnect" href="https://gumroad.com">
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17095898482"></script>
+  <script>
+    window.dataLayer = window.dataLayer||[];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config','AW-17095898482');
+  </script>
+
   <style>
-    @keyframes backgroundMove {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 100% 50%; }
-    }
-
-    @keyframes fadeInUp {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
+    /* Reset & Base */
+    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('https://public-files.gumroad.com/y7lt797rkwfjlyhbo3zuy37lhq5m') no-repeat center center fixed;
-      background-size: cover;
-      animation: backgroundMove 15s infinite alternate ease-in-out;
-      color: #e0e0e0;
+      background: #0e0e0e;
+      color: #f1f1f1;
+      overflow-x: hidden;
     }
 
-    .container {
-      background-color: rgba(0, 0, 0, 0.85);
-      max-width: 900px;
-      margin: 60px auto;
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.7);
-      animation: fadeInUp 1.5s ease-out forwards;
+    /* Hero & Overlay */
+    .hero {
+      min-height: 100vh;
+      background: url('https://public-files.gumroad.com/mv4uwy97tucm1brc2xm8dn1ox5g0') center/cover fixed;
+      display: flex; align-items: center; justify-content: center;
+      padding: 2rem;
     }
-
-    h1 {
-      font-size: 28px;
-      color: #00ccff;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.6;
-      text-align: center;
-    }
-
-    .button {
-      display: inline-block;
-      margin: 16px auto;
-      padding: 14px 28px;
-      background-color: #00ccff;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-      box-shadow: 0 0 10px #00ccff;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .button:hover {
-      transform: scale(1.08);
-      box-shadow: 0 0 18px #00ccff;
-    }
-
-    .product-section {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .product-card {
-      background-color: #111;
+    .overlay {
+      background: rgba(0,0,0,0.7);
+      padding: 4rem 2rem;
       border-radius: 12px;
-      overflow: hidden;
-      width: 260px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.4);
-      transition: transform 0.3s;
-    }
-
-    .product-card:hover {
-      transform: translateY(-6px);
-    }
-
-    .product-card img {
+      max-width: 960px;
       width: 100%;
-      display: block;
-    }
-
-    .product-info {
-      padding: 15px;
       text-align: center;
     }
+    h1 { font-size: 2.8rem; margin-bottom: 1rem; }
+    p  { font-size: 1.2rem; margin-bottom: 2rem; color: #ddd; }
 
-    .product-info h3 {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: #00ccff;
-    }
-
-    .price {
-      font-weight: bold;
-      color: #00ffcc;
-    }
-
-    .review-section, .pro-section {
-      text-align: center;
-      margin-top: 40px;
-    }
-
-    .review-box {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      height: 120px;
-      width: 280px;
-      background-color: #222;
-      color: #00ccff;
-      border: 2px dashed #00ccff;
-      border-radius: 12px;
-      font-size: 16px;
-      font-weight: bold;
-      text-align: center;
-      transition: transform 0.3s, background-color 0.3s;
-      text-decoration: none;
-      margin: 0 auto;
-    }
-
-    .review-box:hover {
-      background-color: #333;
-      transform: scale(1.05);
-    }
-
-    .pro-card {
-      margin: 30px auto;
-      width: 280px;
-      border-radius: 12px;
-      overflow: hidden;
-      background-color: #111;
-      box-shadow: 0 0 25px #00ccff;
-      transition: transform 0.3s;
-    }
-
-    .pro-card:hover {
-      transform: scale(1.05);
-    }
-
-    .pro-card img {
+    /* Gumroad Preview Enlarged */
+    .gumroad-embed-wrap {
+      max-width: 720px;  /* increased from 480px */
+      margin: 0 auto 2rem;
       width: 100%;
     }
 
-    .socials {
-      margin-top: 40px;
-      text-align: center;
+    /* Subscribe & Social */
+    .subscribe, .social-buttons, footer { margin-top: 1.5rem; }
+    input[type="email"] {
+      padding: .75rem 1rem; border: none; border-radius: 4px;
+      width: 100%; max-width: 320px; margin-bottom: 1rem;
     }
-
-    .socials a {
-      color: #00ccff;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
+    button, .btn {
+      background: #00c896; color: #fff;
+      padding: .75rem 1.5rem; border: none; border-radius: 30px;
+      font-weight: bold; cursor: pointer;
+      transition: background .3s, transform .2s;
     }
-
-    .socials a:hover {
-      color: #00ff99;
+    button:hover, .btn:hover {
+      background: #00a67a; transform: scale(1.05);
     }
+    .social-buttons {
+      display: flex; gap: .75rem; justify-content: center;
+    }
+    .btn-social { padding: .6rem 1rem; border-radius: 25px; }
+    .youtube { background: #e52d27; }
+    .instagram { background: #e1306c; }
 
-    .footer {
-      text-align: center;
-      font-size: 13px;
-      color: #888;
-      margin-top: 40px;
+    /* Exit-Intent Popup */
+    .popup {
+      display: none;
+      position: fixed; top: 30%; left: 50%;
+      transform: translate(-50%,-50%);
+      background: #222; padding: 2rem; border-radius: 12px;
+      width: 90%; max-width: 400px; text-align: center; z-index: 999;
+    }
+    .popup h2 { margin-bottom: .5rem; }
+    .popup p  { margin-bottom: 1rem; color: #ccc; }
+    .popup-img {
+      width: 100px; display: block; margin: .75rem auto;
+      border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+    .popup-price { font-size: 1rem; color: #fff; margin-bottom: .5rem; }
+    .popup a { display: inline-block; margin: .5rem 0; }
+
+    @media (max-width: 600px) {
+      .overlay { padding: 3rem 1rem; }
+      h1 { font-size: 2.4rem; }
+      p  { font-size: 1rem; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🌊 Thanks for Downloading the Anime Water Shader!</h1>
-    <p>Dear friend,<br>We appreciate your support. Enjoy the shader and unlock even more features below!</p>
 
-    <!-- Spotlighted Pro Version -->
-    <div class="pro-section">
-      <div class="pro-card">
-        <a href="https://agrimart.gumroad.com/l/animefountain" target="_blank">
-          <img src="https://public-files.gumroad.com/y7lt797rkwfjlyhbo3zuy37lhq5m" alt="Pro Version">
-        </a>
-      </div>
-      <a class="button" href="https://agrimart.gumroad.com/l/animefountain">✨ Upgrade to Pro Version</a>
-    </div>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="overlay">
+      <h1>🌊 Unlock Your Free Creative Asset</h1>
+      <p>Dive into a dreamy world—download this exclusive freebie and discover more from AgrimArt!</p>
 
-    <!-- Review -->
-    <div class="review-section">
-      <p>🙏 If you enjoyed this shader, please leave a review:</p>
-      <a href="https://agrimart.gumroad.com/l/kyhhb" target="_blank" class="review-box">
-        Click to Review<br>Anime Water Shader (Free)
-      </a>
-    </div>
-
-    <!-- Other Products -->
-    <p style="margin-top: 50px;">💡 Discover more creative products:</p>
-    <div class="product-section">
-      <!-- Anime River Product -->
-      <div class="product-card">
-        <a href="https://agrimart.gumroad.com/l/river" target="_blank">
-          <img src="https://public-files.gumroad.com/c60kw757ynpf3e6g5rnr9igkkaqp" alt="Anime River Product">
-          <div class="product-info">
-            <h3>Anime River in Blender 3D</h3>
-            <p class="price">$2</p>
-          </div>
-        </a>
+      <!-- Enlarged Gumroad Embed -->
+      <div class="gumroad-embed-wrap">
+        <script src="https://gumroad.com/js/gumroad-embed.js"></script>
+        <div class="gumroad-product-embed" data-gumroad-single-product-mode>
+          <a href="https://agrimart.gumroad.com/l/mkpch">Loading...</a>
+        </div>
       </div>
 
-      <!-- Second Product -->
-      <div class="product-card">
-        <a href="https://agrimart.gumroad.com/l/pwoyw" target="_blank">
-          <img src="https://public-files.gumroad.com/b6mwj6x9kw0p5sz9gvxta4zdmohw" alt="Second Product">
-          <div class="product-info">
-            <h3>Stylized Anime Lake Shader</h3>
-            <p class="price">$4</p>
-          </div>
-        </a>
+      <!-- Subscribe Form -->
+      <div class="subscribe">
+        <form action="https://gumroad.com/follow_from_embed_form" method="post">
+          <input type="hidden" name="seller_id" value="6308099651361"/>
+          <input type="email" name="email" placeholder="Your email address" required/>
+          <button type="submit">✨ Stay Updated</button>
+        </form>
+      </div>
+
+      <!-- Social Buttons -->
+      <div class="social-buttons">
+        <a href="https://www.youtube.com/@ytagrimart" class="btn btn-social youtube" target="_blank">📺 YouTube</a>
+        <a href="https://www.instagram.com/agrimart.blend/" class="btn btn-social instagram" target="_blank">📸 Instagram</a>
       </div>
     </div>
+  </section>
 
-    <!-- Socials -->
-    <div class="socials">
-      <p>🔗 Stay connected:</p>
-      <a href="https://agrimart.gumroad.com/">Gumroad</a> |
-      <a href="https://www.artstation.com/agrimart">ArtStation</a> |
-      <a href="https://youtube.com/@ytagrimart?feature=shared">YouTube</a>
-    </div>
+  <!-- Exit-Intent Popup -->
+  <div class="popup" id="exitPopup">
+    <h2>Wait! 🎁 Before You Go...</h2>
+    <p>Grab a bonus asset or another freebie below:</p>
 
-    <div class="footer">
-      © Agrim | Designed for Blender artists & creators with ❤️.
-    </div>
+    <!-- Original Freebie -->
+    <a href="https://agrimart.gumroad.com/l/mkpch" class="btn" target="_blank">
+      🛍️ Download Free Now
+    </a>
+
+    <!-- Second Freebie -->
+    <img src="https://public-files.gumroad.com/oqo2l1misxi1fbp2783sgu4vz1yl"
+         alt="Bonus Free Product" class="popup-img" loading="lazy"/>
+    <div class="popup-price">FREE</div>
+    <a href="https://agrimart.gumroad.com/l/kyhhb" class="btn" target="_blank">
+      🛍️ Get This Free Too
+    </a>
   </div>
+
+  <!-- GSAP + Exit-Intent -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script>
+    gsap.from(".overlay > *", {
+      opacity: 0, y: 30,
+      stagger: .2, duration: 1.2, ease: "power3.out"
+    });
+
+    let popupShown = false;
+    document.addEventListener("mouseleave", e => {
+      if (!popupShown && e.clientY < 50) {
+        const pop = document.getElementById("exitPopup");
+        pop.style.display = "block";
+        gsap.from(pop, { scale: .8, opacity: 0, duration: .5, ease: "back.out(1.7)" });
+        popupShown = true;
+      }
+    });
+  </script>
 </body>
 </html>
